# LMS

./: .env  .env.example  .gitignore  README.md  description.md  main.py  pyproject.toml  run.sh
docs/: normalize-guide.html  pipeline-guide.html
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css
src/: __init__.py  app.py
src/agents/: __init__.py  graph.py  state.py
src/agents/common/: __init__.py
src/agents/common/llms/: __init__.py  config.py  enums.py  factory.py
src/agents/common/supervisor/: __init__.py  edges.py  enums.py  graph.py  nodes.py  prompts.py
src/ai/: __init__.py
src/pipeline/: __init__.py  run_export_readable.py  run_extract.py  run_normalize.py  run_pipeline.py  run_preprocess.py  run_test_retrieval.py  test_pdf_deepseek_arabic_ocr.py  test_pdf_mining_first10.py
src/pipeline/ingestion/: __init__.py  config.py  models.py  runner.py  text_utils.py
src/pipeline/ingestion/backends/: __init__.py  docling.py  pdfplumber.py  pymupdf.py  pypdf.py
src/pipeline/ingestion/extract/: __init__.py  bilingual.py  io.py  load_preprocess.py  markdown.py  models.py  pipeline.py  regions.py  tables.py  vision.py
src/pipeline/ingestion/normalize/: __init__.py  batching.py  llm.py  models.py  page_guides.py  pipeline.py  prompts.py  readable_pipeline.py  readable_postprocess.py  readable_prompts.py  reader_export.py  schema.py  toc.py  validate.py
src/pipeline/ingestion/preprocess/: __init__.py  classify.py  io.py  pipeline.py  reporting.py
tests/: conftest.py  test_retrieval.py
(+17 files in other folders)
